# blueye_test_ocr_dll

./: CMakeLists.txt  build.bat
source/: main.cpp
